# ocamlot

./: .dockerignore  .env  .gitattributes  .gitignore  .spin  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  activitypub-server.opam  dune-project  guide.org  history.org  notes.org  ocamlot-failed-events.json  ocamlot.opam  sqitch.plan  todo.org  update-hook.sh  watch.sh
.github/workflows/: ci.yml
database/: database.ml  dune  post.ml  user.ml
lib/: dune  error.ml  password.ml  user.ml
lib/activitypub/: activitypub.ml  common.ml  constants.ml  decode.ml  dune  encode.ml  readme.md  types.ml
lib/api/: api.ml  dune
lib/auth/: auth.ml  auth.mli  dune  main.ml
lib/bulma/: brr_int.ml  bulma.ml  dune  types.ml
lib/common/: common.ml  dune
lib/config/: dune
lib/configuration/: configuration.ml  dune  features.ml  format.ml  params.ml  params.mli  regex.ml  url.ml
lib/database/: activity.ml  activity.mli  actor.ml  actor.mli  database.ml  dune  follow.ml  follow.mli  interface.ml  like.ml  like.mli  link.ml  local_user.ml  local_user.mli  mention.ml  mention.mli  operations.ml  post.ml  post.mli  remote_instance.ml  remote_instance.mli  remote_user.ml  remote_user.mli  tables.ml  tag.ml  tag.mli  types.ml  user.ml  user.mli  utils.ml
lib/error_handling/: dune  error_handling.ml
lib/html/: dune  home.ml  html.ml  login.ml  utils.ml
lib/password/: dune  password.ml  password.mli
lib/resolver/: ap_resolver.ml  dune  requests.ml
lib/server/: activity.ml  actor.ml  authentication.ml  common.ml  dune  error_display.ml  error_handling.ml  extract.ml  feed.ml  follow_requests.ml  home.ml  images.ml  logging.ml  logging.mli  navigation.ml  old  post.ml  resolver.ml  resolver.mli  runner.ml  server.ml  server.mli  settings.ml  users.ml  web.ml  webfinger.ml  worker.ml  write_post.ml
lib/settings/: dune  settings.mli
lib/sql/: ast.ml  dune  parser.ml  sql.ml  types.ml
lib/time/: dune  parser.ml  time.ml
lib/utils/auth/: auth.ml  auth.mli  dune  http_sig.ml
lib/utils/dream_runner/: dune
lib/utils/http_date/: dune
lib/utils/http_sig/: dune  http_sig.ml  http_sig.mli
lib/utils/logging/: dune
lib/view/: components.ml  dune  error.ml  follow_requests.ml  form.ml  header.ml  login_box.ml  page.ml  post.ml  post_grid.ml  profile.ml  settings.ml  user.ml  utils.ml  write_post_box.ml
lib/worker/: dune  task.ml  utils.ml  worker.ml  worker.mli
macros/ppx_activitypub/: dune  ppx_activitypub.ml
macros/ppx_sql/: dune  ppx_sql.ml  utils.ml
macros/test/: dune  example_queries.sql  ppx_activitypub_test.ml  ppx_sql_test.ml
resources/: config.nginx  data.org  palette.ase  palette.gpl  schema.sql
resources/examples/: example.lo.2g  pleroma-account.json  pleroma-create-note.json  pleroma-follow-accept.json  pleroma-follow-cancel.json  pleroma-follow-undo.json  pleroma-follow.json  pleroma-followers.json  pleroma-reject.json  pleroma-webfinger.json
routes/: api.ml  site.ml
run/: dune  run.ml
scripts/: dune  hetzner-setup.sh  nfsh-setup.sh  ocamlot.service  run.sh  run_and_rebuild.ml
service/: service.ml
static/: dune
static/style/: colors.css  components.css  dune  fonts.css  style.css  style.scss  vanilla-framework-version-3.6.1.min.css
test/: dune  test_password.ml  test_user.ml
tests/: dune  test_activity.ml  test_actor.ml  test_auth.ml  test_follow.ml  test_instance.ml  test_like.ml  test_local_user.ml  test_post.ml  test_remote_user.ml  test_user.ml  testing_utils.ml  testing_utils.mli
tests/activitypub/: decoder.ml  dune  pleroma-create-note.t  pleroma-follow.t  pleroma-like.t  pleroma-reboost.t  pleroma-undo.t  pleroma-user.t
tests/activitypub/resources/: pleroma-create-note.json  pleroma-emoji-react.json  pleroma-follow.json  pleroma-like.json  pleroma-outbox-page-0.json  pleroma-outbox-page.json  pleroma-reboost.json  pleroma-undo.json  pleroma-user.json  pleroma-webfinger.json
tests/database/: 01_activity_create.t  02_activity_create_multiple.t  03_activity_update_raw_data.t  04_local_user_create_user.t  05_local_user_create_duplicate.t  06_local_user_login.t  07_local_user_resolve.t  08_local_user_multiple_login.t  09_local_user_find.t  10_local_user_update_password.t  11_local_user_update_display_name.t  12_local_user_update_about.t  13_local_user_update_manually_accept_follows.t  14_local_user_update_is_admin.t  15_local_user_local_user_count.t  16_local_user_find_local_users.t  17_local_user_find_local_user_count.t  18_remote_instance_create_instance.t  19_remote_instance_create_instance_multiple.t  20_remote_instance_create_instance_error.t  21_remote_instance_update_instance_last_unreachable.t  22_remote_instance_unset_instance_last_unreachable.t  23_remote_instance_resolve.t  24_remote_instance_find_possible_instances_to_query.t  25_remote_instance_lookup_instance_error.t  26_remote_user_create.t  27_remote_user_create_multiple.t  28_remote_user_create_error.t  29_remote_user_lookup_remote_user_by_address.t  30_remote_user_lookup_remote_user_by_url.t  31_remote_user_get_known_remote_actors.t  32_remote_user_collect_remote_users.t  33_remote_user_collect_remote_users_following.t  34_remote_user_find_remote_users.t  35_actor_create_local.t  36_actor_create_remote.t  37_actor_lookup_local.t  38_actor_lookup_remote.t  39_tag_create.t  40_tag_create_find_by_name.t  (+25 more)
tests/integration_tests/: .env.production  config.exs  docker-compose.local.yml  docker-compose.yml  dune  gen_certs.Dockerfile  mastodon-local.Dockerfile  mastodon.nginx  ocamlot-local.Dockerfile  ocamlot.Dockerfile  ocamlot.nginx  pleroma-local.Dockerfile  pleroma.Dockerfile  pleroma.nginx  pleroma.patch  run_mastodon.sh  run_ocamlot.sh  run_ocamlot_local.sh  run_pleroma.sh  run_pleroma_local.sh  setup_db.psql  test_1.ml
tests/integration_tests/tests/integration_tests/pleroma/: logs
tests/unit_tests/: dune.disabled  test_activity.ml  test_actor.ml  test_follow.ml  test_http_sig.ml  test_instance.ml  test_like.ml  test_local_user.ml  test_password.ml  test_post.ml  test_remote_user.ml  testing_utils.ml
web/handler/: api.ml  page.ml
(+45 files in other folders)
