(tests
 (names test_password test_local_user test_remote_user test_actor test_http_sig test_activity test_instance)
 (modules (:standard \ "testing_utils"))
 (libraries http_sig password database testing_utils mirage-crypto-rng.lwt)
 (deps ../resources/schema.sql)
 (preprocess (pps ppx_deriving.std)))

(library (name testing_utils)
 (modules testing_utils)
 (libraries
   containers bos
   alcotest alcotest-lwt
   caqti-lwt caqti-driver-sqlite3))
