(library (name common)
 (preprocess (pps ppx_deriving.show))
 (modules common)
 (libraries
   ;; Internal libraries 
   activitypub database logging error_handling
   ;; General utility libraries
   containers lwt lwt.unix magic-mime yojson tyxml
   ;; Web server
   dream
   ;; Database
   caqti caqti-lwt))
