(library (name database)
 (libraries
   ;; internal libraries
   password activitypub configuration
   ;; external libraries
   containers uuidm
   ;; crypto
   x509
   ;; database
   caqti-lwt caqti-driver-sqlite3 sqlite3 caqti-type-calendar

   ptime ptime.clock.os
   petrol
 )
 (preprocess (pps ppx_deriving.show))
)
