(library (name database)
 (libraries
   ;; internal libraries
   password activitypub configuration
   ;; crypto
   x509 cstruct
   ;; database
   caqti caqti-lwt caqti-driver-sqlite3
   ;; time
   ptime ptime.clock.os
   ;; general utility libraries
   containers uri lwt yojson
   petrol
 )
 (preprocess (pps ppx_deriving.show))
)
