(library (name server)
 (preprocess (pps ppx_deriving.show))
 (libraries
   common configuration error_handling activitypub database worker view http_sig
   ap_resolver markdown logging static dream_runner


   containers re lwt lwt.unix yojson omd tyxml tyxml.functor uri uuidm magic-mime logs

   decoders decoders-yojson

   caqti caqti-lwt

   dream dream-pure dream.http

   mirage-crypto-rng mirage-crypto-rng-lwt mirage-crypto cstruct

   conan conan.string conan-database fpath

   calendar
   ptime ptime.clock.os
   ; html common logging error_handling dream_runner worker http_sig database activitypub configuration static
   ; dream markdown bos
   ; jwto
   ; caqti caqti-driver-sqlite3
))
