(library (name http_sig)
 (modules (:standard \ "main"))
 (libraries http_date calendar ptime containers dream x509 cohttp cohttp-lwt cohttp-lwt-unix lwt yojson))

(executable (name main)
 (modules "main")
 (preprocess (pps ppx_yojson_conv ppx_deriving.std))
 (libraries http_sig containers x509 cohttp cohttp-lwt cohttp-lwt-unix lwt lwt.unix yojson))
